set( SIXTRACKLIB_COMMON_BE_DRIFT_C99_HEADERS be_drift.h )
set( SIXTRACKLIB_COMMON_BE_DRIFT_CXX_HEADERS be_drift.hpp )

if( SIXTRACKLIB_COMMON_BE_DRIFT_C99_HEADERS )
    string( REGEX REPLACE "([^;]+)" "be_drift/\\1" LOCAL_C99_HEADERS
            "${SIXTRACKLIB_COMMON_BE_DRIFT_C99_HEADERS}" )

    set(  SIXTRACKLIB_COMMON_C99_HEADERS
        ${SIXTRACKLIB_COMMON_C99_HEADERS}
        ${LOCAL_C99_HEADERS} PARENT_SCOPE )
endif()

if( SIXTRACKLIB_COMMON_BE_DRIFT_CXX_HEADERS )
    string( REGEX REPLACE "([^;]+)" "be_drift/\\1" LOCAL_CXX_HEADERS
            "${SIXTRACKLIB_COMMON_BE_DRIFT_CXX_HEADERS}" )

    set(  SIXTRACKLIB_COMMON_CXX_HEADERS
        ${SIXTRACKLIB_COMMON_CXX_HEADERS}
        ${LOCAL_CXX_HEADERS} PARENT_SCOPE )
endif()

# ----------------------------------------------------------------------------
# install :

if( SIXTRACKLIB_COMMON_BE_DRIFT_C99_HEADERS )
    install( FILES ${SIXTRACKLIB_COMMON_BE_DRIFT_C99_HEADERS}
             DESTINATION "${SIXTRL_COMMON_C99_INSTALL_PREFIX}/be_drift" )
endif()


if( SIXTRACKL_ENABLE_CXX AND SIXTRACKLIB_COMMON_BE_DRIFT_CXX_HEADERS )
    install( FILES ${SIXTRACKLIB_COMMON_BE_DRIFT_CXX_HEADERS}
             DESTINATION "${SIXTRL_COMMON_CXX_INSTALL_PREFIX}/be_drift" )
endif()

#end: sixtracklib/common/be_drift/CMakeLists.txt
